<resources>
    <!-- application -->
    <string name="app_name">Tumblr Browse</string>
    <!-- photo dialog -->
    <string name="post_dialog_title">%s</string>
    <!-- account dialog -->
    <string name="delete_account_title">Removal confirmation</string>
    <string name="delete_account_message">Are you sure you want to remove your following blog: %s</string>
    <!-- main menu -->
    <string name="btn_accounts_label">Accounts</string>
    <string name="btn_get_blogs_label">Refresh following blogs</string>
    <string name="btn_history_label">History</string>
    <string name="btn_export_preferences_label">Export / Import</string>
    <string name="btn_my_blog_posts_label">My posts</string>
    <string name="loading_label">Loading…</string>
    <!-- account activity toolbar -->
    <string name="account_activity_add_subtitle">Connect a blog</string>
    <string name="account_activity_choose_subtitle">Choose a blog</string>
    <string name="account_activity_title">Accounts</string>
    <!-- main toolbar -->
    <string name="main_activity_subtitle">Following blogs</string>
    <!-- history toolbar -->
    <string name="history_activity_subtitle">History</string>
    <!-- account menu -->
    <string name="menu_action_add_account">Add account</string>
    <string name="menu_action_close">Close</string>
    <!-- blog menu -->
    <string name="menu_action_bookmark">Bookmark</string>
    <string name="menu_action_follow_blog">Follow blog</string>
    <string name="menu_action_unfollow_blog">Unfollow blog</string>
    <string name="menu_action_get_blog_information">Display blog information</string>
    <!-- account management -->
    <string name="alert_add_blog_success">Blog "%s" is successfully added</string>
    <string name="alert_current_blog">Current blog is: %s</string>
    <string name="alert_liked">Liked</string>
    <string name="alert_like_failed">Like failed</string>
    <string name="alert_request_blog_error">Error during request: %s</string>
    <string name="delete_account_negative_label">No</string>
    <string name="delete_account_positive_label">Yes, remove it</string>
    <!-- (un)follow blog -->
    <string name="unfollow_blog_title">Unfollow blog</string>
    <string name="unfollow_blog_confirm">Are you sure wou want unfollow \"%s\" blog?</string>
    <string name="unfollow_blog_confirm_yes">Yes, unfollow this blog!</string>
    <string name="unfollow_blog_confirm_no">No</string>
    <string name="alert_blog_followed">You\'re now following \"%s\" blog</string>
    <string name="alert_blog_unfollowed">You\'re no longer following \"%s\" blog</string>
    <!-- post notes -->
    <plurals name="placeholder_text_note">
        <item quantity="one">%d note</item>
        <item quantity="other">%d notes</item>
    </plurals>
    <!-- main activity layout -->
    <string name="new_content_image_alt">New content</string>
    <!-- history page -->
    <string name="history_activity_page_label">(page %d)</string>
    <!-- preferences export/import -->
    <string name="backup_confirm_title">Backup preferences</string>
    <string name="backup_confirm_message">Preferences of \"%s\" blog can be saved in your phone storage if you need to restore it</string>
    <string name="backup_export_button">Export</string>
    <string name="backup_import_button">Import</string>
    <string name="backup_discard_button">Do nothing</string>
    <string name="backup_filename">%1$s/Android/data/%2$s/files/%3$s.bk</string>
    <string name="alert_export_preferences_success">Preferences saved</string>
    <string name="alert_export_preferences_fail_storage">Preferences not saved (require access to external storage)</string>
    <string name="alert_export_preferences_fail_error">Preferences not saved (error)</string>
    <string name="alert_import_preferences_success">Preferences restored</string>
    <string name="alert_import_preferences_fail_not_found">Preferences not restored (file not found)</string>
    <string name="alert_import_preferences_fail_error">Preferences not restored (error)</string>
</resources>
