<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Progress indicator -->
    <item
        android:id="@+id/miActionProgress"
        android:title="@string/loading_label"
        android:orderInCategory="100"
        app:showAsAction="always"
        app:actionLayout="@layout/progress_bar"
        android:visible="false"/>

    <!-- Account management button -->
    <item
        android:id="@+id/btn_accounts"
        android:icon="@drawable/ic_account"
        app:showAsAction="never"
        android:title="@string/btn_accounts_label">
    </item>

    <!-- Refreshing blogs button -->
    <item
        android:id="@+id/btn_blogs"
        android:icon="@drawable/ic_sync"
        app:showAsAction="never"
        android:title="@string/btn_get_blogs_label">
    </item>

    <!-- See current blog posts -->
    <item
        android:id="@+id/btn_my_blog_posts"
        android:icon="@drawable/ic_account"
        app:showAsAction="never"
        android:title="@string/btn_my_blog_posts_label">
    </item>

    <!-- See history -->
    <item
        android:id="@+id/btn_history"
        android:icon="@drawable/ic_history"
        app:showAsAction="never"
        android:title="@string/btn_history_label">
    </item>

    <!-- Export / import preferences -->
    <item
        android:id="@+id/btn_export_preferences"
        android:icon="@drawable/ic_backup"
        app:showAsAction="never"
        android:title="@string/btn_export_preferences_label">
    </item>

</menu>
